Fix a layout issue in header

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -1,27 +1,29 @@
 .header {
-  padding-top: 70px;
   background: #f5f5f5;
   border-bottom: 1px solid #d1d1d1;
-  position: relative;
-  .signout {
-    position: absolute;
-    right: 15px;
-    top: 0;
-    background: #333;
-    padding: 5px 15px;
-    border-radius: 0 0 3px 3px;
-    color: #ccc;
-    &:hover {
-      text-decoration: none;
-      color: white;
+  &> .width {
+    padding-top: 70px;
+    position: relative;
+    .signout {
+      position: absolute;
+      right: 15px;
+      top: 0;
+      background: #333;
+      padding: 5px 15px;
+      border-radius: 0 0 3px 3px;
+      color: #ccc;
+      &:hover {
+        text-decoration: none;
+        color: white;
+      }
     }
-  }
-  .logo {
-    background: url(logo.png);
-    width: 502px;
-    height: 98px;
-    text-indent: -9999px;
-    position: absolute;
-    top: 0;
+    .logo {
+      background: url(logo.png);
+      width: 502px;
+      height: 98px;
+      text-indent: -9999px;
+      position: absolute;
+      top: 0;
+    }
   }
 }
